# krkr2-no-vcpkg-fork2

./: .gitignore  CMakeLists.txt  Makefile  Makefile.bpif3  Makefile.macos  Makefile.msys2  Makefile.visionfive2  README.md  README_CN.md  README_original.md  console.bat  readme_android_run_failed_001.txt  readme_android_run_failed_002.txt  readme_compare_old_no_vcpkg.txt  readme_rpi4_sigbus.txt  restart.bat
_testdata/savedata/: data999.ksd  datasc.ksd  datasu.ksd
cmake/Modules/: CocosConfigDefine.cmake  CocosConfigDepend.cmake
cocos/: Android.mk  CMakeLists.txt  cocos2d.h
cocos/2d/: CCDrawingPrimitives.cpp  CCDrawingPrimitives.h  CCNode.cpp
cocos/base/: CCDirector.cpp
cocos/base/allocator/: CCAllocatorBase.h
cocos/editor-support/cocosbuilder/: CCBAnimationManager.cpp
cocos/editor-support/cocostudio/: CCComAudio.cpp  CCSSceneReader.cpp
cocos/editor-support/cocostudio/ActionTimeline/: CSLoader.cpp
cocos/platform/: CCFileUtils.cpp  CCGLView.cpp
cocos/platform/android/: CCFileUtils-android.cpp  javaactivity-android.cpp
cocos/platform/linux/: CCDevice-linux.cpp
cocos/platform/win32/: CCApplication-win32.cpp  CCDevice-win32.cpp  CCFileUtils-win32.cpp
cocos/renderer/: CCRenderer.cpp  CCRenderer.h
cocos/ui/: UIVideoPlayer.h
cocosstudio/kr2/: kr2.ccs  kr2.cfg  kr2.udf
cocosstudio/kr2/Resources/res/ui/: NaviBarWithMenu.csb
cocosstudio/kr2/cocosstudio/ui/: NaviBarWithMenu.csd  NaviBarWithMenu2.csd
extensions/: Android.mk  CMakeLists.txt
jni/: Android.mk  Application.mk  krkr2_android.cpp  main.cpp
project/android/: .project  AndroidManifest.xml
project/android/res/values/: strings.xml
project/android/src/org/cocos2dx/cpp/: LoadingActivity.java  MainActivityDevelop.java
project/android/src/org/cocos2dx/lib/: Cocos2dxActivity.java  Cocos2dxHelper.java  Cocos2dxMusic.java  Cocos2dxVideoView.java
project/android/src/org/github/krkr2/: KR2Application.java  MainActivity.java
project/android/src/org/libsdl/app/: HIDDeviceBLESteamController.java
project/android/src/org/tvp/kirikiri2/: DialogMessage.java  KR2Activity.java
project/androidstudio/: settings.gradle
project/androidstudio/app/: build.gradle
project/androidstudio/app/src/main/: AndroidManifest.xml
project/androidstudio/app/src/main/java/org/cocos2dx/lib/: Cocos2dxActivity.java  Cocos2dxDataManager.java  Cocos2dxDownloader.java  Cocos2dxSound.java
project/androidstudio/app/src/main/java/org/github/krkr2/: KR2Application.java  MainActivity.java
project/androidstudio/app/src/main/java/org/libsdl/app/: SDLActivity.java  SDLAudioManager.java
project/androidstudio/app/src/main/java/org/tvp/kirikiri2/: DialogMessage.java  KR2Activity.java
project/androidstudio/app/src/main/res/values/: strings.xml
src/core/: CMakeLists.txt
src/core/base/: 7zArchive.cpp  CMakeLists.txt  MsgIntf.cpp  ScriptMgnIntf.cpp  SystemIntf.cpp  TextStream.cpp  UtilStreams.cpp  ZIPArchive.cpp
src/core/base/impl/: StorageImpl.cpp
src/core/environ/: Application.cpp  CMakeLists.txt  DumpSend.cpp  Platform.h
src/core/environ/android/: AndroidUtils.cpp
src/core/environ/cocos2d/: AppDelegate.cpp  MainScene.cpp
src/core/environ/linux/: Platform.cpp
src/core/environ/ui/: BaseForm.cpp  FileSelectorForm.cpp  MainFileSelectorForm.cpp
src/core/environ/ui/csd/: CsdUIFactory.h
src/core/environ/win32/: Platform.cpp
src/core/extension/: CMakeLists.txt
src/core/movie/: CMakeLists.txt
src/core/movie/ffmpeg/: AudioCodecFFmpeg.cpp  Demux.h  DemuxFFmpeg.cpp  DemuxPacket.cpp  StreamInfo.h  VideoCodecFFmpeg.cpp
src/core/plugin/: CMakeLists.txt  PluginImpl.cpp  ncbind.hpp
src/core/sound/: CMakeLists.txt  FFWaveDecoder.cpp  MathAlgorithms.h  VorbisWaveDecoder.cpp  WaveIntf.cpp
src/core/sound/win32/: WaveImpl.cpp  WaveMixer.cpp  tvpsnd.cpp
src/core/tjs2/: CMakeLists.txt  tjs.cpp  tjs.tab.cpp  tjs.tab.hpp  tjsCompileControl.cpp  tjsConfig.cpp  tjsDateParser.cpp  tjsDateWordMap.inc  tjsDebug.cpp  tjsDisassemble.cpp  tjsError.cpp  tjsInterCodeExec.cpp  tjsInterCodeGen.cpp  tjsInterCodeGen.h  tjsMath.cpp  tjsScriptBlock.cpp  tjsString.cpp  tjsString.h  tjsTypes.h  tjsVariant.cpp  tjsVariantString.cpp  tjsdate.tab.cpp  tjsdate.tab.hpp  tjspp.tab.cpp  tjspp.tab.hpp
src/core/utils/: CMakeLists.txt  DebugIntf.cpp
src/core/visual/: CMakeLists.txt  ComplexRect.cpp  FontImpl.cpp  FontImpl.h  FreeTypeFontRasterizer.cpp  GraphicsLoaderIntf.cpp  LayerIntf.cpp  LoadBPG.cpp  LoadJPEG.cpp  LoadJXR.cpp  LoadWEBP.cpp  RenderManager.cpp  RenderManager.h  TransIntf.cpp  TransIntf.h  transhandler.h
src/core/visual/gl/: aligned_allocator.h
src/core/visual/impl/: BitmapBitsAlloc.cpp  BitmapBitsAlloc.h  VideoOvlImpl.cpp
src/core/visual/ogl/: RenderManager_ogl.cpp  etcpak.cpp  pvrtc.cpp
src/plugins/: CMakeLists.txt  saveStruct.cpp
src/plugins/DrawDeviceForSteam/: CMakeLists.txt
src/plugins/fstat/: CMakeLists.txt
src/plugins/json/: CMakeLists.txt
src/plugins/layerex_draw/: CMakeLists.txt
src/plugins/motionplayer/: CMakeLists.txt
src/plugins/psbfile/: CMakeLists.txt
src/plugins/psdfile/: CMakeLists.txt
src/plugins/psdfile/psdparse/: CMakeLists.txt
src/plugins/steam/: CMakeLists.txt
